Fix logo clipping and bust Safari favicon cache
- Set logoImg height only (width: auto) to prevent SVG clipping in Safari
- Add cache-busting query string to favicon link

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -32,8 +32,8 @@
 }
 
 .logoImg {
-  height: 32px;
-  width: 32px;
+  height: 28px;
+  width: auto;
   display: block;
 }
 
